k8s/infra/observability/extra/httproute.yml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: thanos-query-frontend
spec:
  parentRefs:
    - name: eg-http-public
      namespace: core-eg
      sectionName: https
  hostnames:
    - thanos.as212024.net
  rules:
    - matches:
        - path:
            value: "/"
      backendRefs:
        - name: thanos-query-frontend
          port: 9090
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: thanos-bucketweb
spec:
  parentRefs:
    - name: eg-http-public
      namespace: core-eg
      sectionName: https
  hostnames:
    - thanos-bucketweb.as212024.net
  rules:
    - matches:
        - path:
            value: "/"
      backendRefs:
        - name: thanos-bucketweb
          port: 8080
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: thanos-bucketweb
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: thanos-bucketweb
  oidc:
    provider:
      issuer: https://auth.lama-corp.space/application/o/thanos-bucketweb/
    clientID: thanos-bucketweb
    clientSecret:
      name: thanos-bucketweb-oidc-credentials
    scopes:
      - offline_access
    refreshToken: true
