k8s/infra/observability/extra/vm.yml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-ingress-vmagent
spec:
  endpointSelector: {}
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/instance: vmks
            app.kubernetes.io/name: vmagent
            k8s:io.kubernetes.pod.namespace: core-observability
